hphp/hack/test/typecheck/argument_unpacking/unpack_call12_infer.php.exp
File "unpack_call12_infer.php", line 18, characters 21-22:
Invalid argument (Typing[4110])
  File "unpack_call12_infer.php", line 22, characters 32-34:
  Expected `int`
  File "unpack_call12_infer.php", line 15, characters 16-20:
  But got `string`
  File "hackarray.hhi", line 52, characters 72-72:
    via this generic `T`
  File "hackarray.hhi", line 22, characters 35-36:
    via this generic `Tv`
  File "interfaces.hhi", line 115, characters 23-24:
    via this generic `Tv`
  File "interfaces.hhi", line 92, characters 66-67:
    via this generic `Tv`
